Mon May 12 23:57:15 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rb_cv_atan2_inf_c99): check whether runtime atan2
	  handles Inf as C99. [ruby-core:62536] [Bug #9831]

Mon May 12 20:33:01 2014  Tanaka Akira  <akr@fsij.org>

	* configure.in: Invoke AC_REPLACE_FUNCS for each function.

Mon May 12 19:52:11 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: count young object correctly and show it in GC.stat
	  on RGENGC_AGE2_PROMOTION.

	* gc.c (RVALUE_PROMOTE_YOUNG): decrement young object count on
	  YOUNG->OLD.

	* gc.c (obj_free): decrement young object count when young object
	  freed.

	* gc.c (gc_marks): should not clear young object count.

	* gc.c (gc_stat_internal): GC.stat :young_object information.

Mon May 12 01:30:59 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ifaddr.c (IS_IFADDRS): Unused macro removed.

	* ext/strscan/strscan.c (BUFSIZE): Ditto.

	* ext/zlib/zlib.c (OBJ_IS_FREED): Ditto.

Sun May 11 22:27:18 2014  Tanaka Akira  <akr@fsij.org>

	* compile.c (BUFSIZE): Unused macro removed.

	* vm.c (BUFSIZE): Ditto.

	* pack.c (INT64toNUM): Ditto.
	  (UINT64toNUM): Ditto.
	  (BYTEWIDTH): Ditto.

	* time.c (lshift): Ditto.
	  (UINT64toNUM): Ditto.
	  (id_lshift): Unused variable removed.

Sun May 11 21:23:27 2014  Tanaka Akira  <akr@fsij.org>

	* pack.c (swaps): Unused macro removed.
	  (swapi): Ditto.
	  (swapl): Ditto.
	  (swapll): Ditto.

Sun May 11 08:02:49 2014  Eric Wong  <e@80x24.org>

	* vm_core.h (rb_vm_t): list_head and counter for living_threads
	  (rb_thread_t): vmlt_node for living_threads linkage
	  (rb_vm_living_threads_init): new function wrapper
	  (rb_vm_living_threads_insert): ditto
	  (rb_vm_living_threads_remove): ditto
	* vm.c (rb_vm_living_threads_foreach): new function wrapper
	* thread.c (terminate_i, thread_start_func_2, thread_create_core,
	  thread_fd_close_i, thread_fd_close): update to use new APIs
	* vm.c (vm_mark_each_thread_func, rb_vm_mark, ruby_vm_destruct,
	  vm_memsize, vm_init2, Init_VM): ditto